evolution-service/deployment/example/versions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esp-blue
spec:
  replicas: 2
  template:
    spec:
      containers:
          - name: esp
            image: leaf/esp-service:v3
            imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esp-green
spec:
  replicas: 1
  template:
    spec:
      containers:
          - name: esp
            image: leaf/esp-service:v2
            imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-esp-virtual-service
spec:
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: esp
        subset: blue
---
